--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto de Snake Game</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Olá, boa noite</h1>
+    <div class="wallpaper-snake">
+        <div class="capa-snake">
+            <div class="tema-snake"><img src="/icon/snake-game.png"></div>
+            <a href="/templates/menu-1-snake.html" class="play-snake">Play</a>
+        </div>
+    </div>
 </body>
 </html>
